--- a/aigou_gen/src/main/resources/aigou_product.properties
+++ b/aigou_gen/src/main/resources/aigou_product.properties
@@ -11,6 +11,6 @@ parent=cn.itsource.aigou
 
 #数据库连接信息
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql:///aigou_user
+jdbc.url=jdbc:mysql:///aigou_product
 jdbc.user=root
 jdbc.pwd=root
