--- a/product_parent/product_interface/pom.xml
+++ b/product_parent/product_interface/pom.xml
@@ -27,5 +27,10 @@
             <artifactId>mybatis-plus</artifactId>
             <version>2.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>cn.ttaigou</groupId>
+            <artifactId>basic_util</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
