--- a/common_parent/common_service_8010/pom.xml
+++ b/common_parent/common_service_8010/pom.xml
@@ -3,35 +3,29 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>product_parent</artifactId>
+        <artifactId>common_parent</artifactId>
         <groupId>cn.ttaigou</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>product_service_8002</artifactId>
+    <artifactId>common_service_8010</artifactId>
 
     <dependencies>
-        <!--springboot支持-->
+        <dependency>
+            <groupId>cn.ttaigou</groupId>
+            <artifactId>common_interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-        </dependency>
-        <!--mybatis-plus支持-->
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>2.2.0</version>
-        </dependency>
-
-        <!--数据库支持-->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <!--配置中心支持-->
@@ -59,31 +53,14 @@
             <version>2.9.2</version>
         </dependency>
 
-        <!--eureka客户端支持 内部间调用别人接口-->
+        <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>cn.ttaigou</groupId>
-            <artifactId>common_interface</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>cn.ttaigou</groupId>
-            <artifactId>product_interface</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <!--json操作-->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.1.30</version>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
         </dependency>
 
     </dependencies>
-
     <!--打包插件依赖-->
     <build>
         <plugins>
@@ -91,7 +68,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>cn.itsource.aigou.ProductService_8002</mainClass>
+                    <mainClass>cn.itsource.aigou.CommonApplication_8010</mainClass>
                     <layout>ZIP</layout>
                 </configuration>
                 <executions>
