--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <module>config_server_8848</module>
         <module>product_parent</module>
         <module>aigou_gen</module>
+        <module>common_parent</module>
+        <module>common_parent</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
