--- a/common_parent/common_service_8010/pom.xml
+++ b/common_parent/common_service_8010/pom.xml
@@ -59,7 +59,11 @@
             <artifactId>jedis</artifactId>
             <version>2.9.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.7</version>
+        </dependency>
     </dependencies>
     <!--打包插件依赖-->
     <build>
