--- a/common_parent/common_service_8010/pom.xml
+++ b/common_parent/common_service_8010/pom.xml
@@ -64,6 +64,17 @@
             <artifactId>velocity</artifactId>
             <version>1.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.csource</groupId>
+            <artifactId>fastdfs-client-java</artifactId>
+            <version>1.27-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.ttaigou</groupId>
+            <artifactId>basic_util</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <!--打包插件依赖-->
     <build>
