--- a/zuul_gateway_9527/src/main/resources/bootstrap.yml
+++ b/zuul_gateway_9527/src/main/resources/bootstrap.yml
@@ -20,8 +20,11 @@ hystrix:
   command:
     default:
       execution:
-        timeout:
-          enabled: true
         isolation:
           thread:
-            timeoutInMilliseconds: 8000
+            timeoutInMilliseconds: 20000
+ribbon:
+  ReadTimeout: 60000
+  ConnectTimeout: 60000
+  MaxAutoRetries: 0
+  MaxAutoRetriesNextServer: 1
