--- a/aigou_gen/src/main/resources/aigou_product.properties
+++ b/aigou_gen/src/main/resources/aigou_product.properties
@@ -5,7 +5,7 @@ OutputDirXml=E:\\openSource\\IdeaProjects\\aigou_parent\\product_parent\\product
 
 OutputDirBase=E:\\openSource\\IdeaProjects\\aigou_parent\\product_parent\\product_interface\\src\\main\\java
 #设置作者
-author=yhptest
+author=cky
 #自定义包路径
 parent=cn.itsource.aigou
 
